still working on temp pdf saving

--- a/test/demo.html
+++ b/test/demo.html
@@ -4,7 +4,7 @@
     <title>Some xaringan slides!</title>
     <meta charset="utf-8" />
     <meta name="author" content="John Helveston" />
-    <link href="libs/remark-css/default.css" rel="stylesheet" />
+    <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
   </head>
   <body>
     <textarea id="source">
