added DescTools dependency

--- a/inst/example/slides.html
+++ b/inst/example/slides.html
@@ -4,6 +4,7 @@
     <title>Presentation Ninja</title>
     <meta charset="utf-8" />
     <meta name="author" content="Yihui Xie" />
+    <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/default-fonts.css" rel="stylesheet" />
   </head>
@@ -15,7 +16,7 @@ class: center, middle, inverse, title-slide
 ## ⚔<br/>with xaringan
 ### Yihui Xie
 ### RStudio, PBC
-### 2016/12/12 (updated: 2020-10-03)
+### 2016/12/12 (updated: 2021-01-30)
 
 ---
 
@@ -617,9 +618,9 @@ names(xaringan:::list_css())
 ## [19] "ninjutsu"         "rladies-fonts"    "rladies"         
 ## [22] "robot-fonts"      "robot"            "rutgers-fonts"   
 ## [25] "rutgers"          "shinobi"          "tamu-fonts"      
-## [28] "tamu"             "uo-fonts"         "uo"              
-## [31] "uol-fonts"        "uol"              "useR-fonts"      
-## [34] "useR"
+## [28] "tamu"             "uio-fonts"        "uio"             
+## [31] "uo-fonts"         "uo"               "uol-fonts"       
+## [34] "uol"              "useR-fonts"       "useR"
 ```
 
 ---
