--- a/inst/example/slides_partial.html
+++ b/inst/example/slides_partial.html
@@ -4,6 +4,7 @@
     <title>Presentation Ninja</title>
     <meta charset="utf-8" />
     <meta name="author" content="Yihui Xie" />
+    <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/default-fonts.css" rel="stylesheet" />
   </head>
@@ -15,7 +16,7 @@ class: center, middle, inverse, title-slide
 ## ⚔<br/>with xaringan
 ### Yihui Xie
 ### RStudio, PBC
-### 2016/12/12 (updated: 2021-02-07)
+### 2016/12/12 (updated: 2021-02-10)
 
 ---
 
