updated examples to include mp4

--- a/inst/example/slides.html
+++ b/inst/example/slides.html
@@ -4,7 +4,6 @@
     <title>{xaringanBuilder}</title>
     <meta charset="utf-8" />
     <meta name="author" content="John Paul Helveston" />
-    <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/default-fonts.css" rel="stylesheet" />
     <link href="libs/panelset/panelset.css" rel="stylesheet" />
@@ -17,7 +16,7 @@ class: center, middle, inverse, title-slide
 # {xaringanBuilder}
 ## Build xaringan slides to different outputs
 ### John Paul Helveston
-### 2016/12/12 (updated: 2021-02-25)
+### 2020/09/27 (updated: 2021-02-26)
 
 ---
 
@@ -41,20 +40,25 @@ You can install the current version of xaringanBuilder from GitHub:
 remotes::install_github("jhelvy/xaringanBuilder")
 ```
 
+--
+
 .pull-left[
-## Supported output types: 
+#### Supported output types: 
 
 - html
 - pdf
 - gif
+- mp4
 - pptx
 - png 
 - social: png image of first slide sized for social media sharing (e.g. Twitter)
 
 ]
 
+--
+
 .pull-right[
-## Build hierarchy:
+#### Build hierarchy:
 
 ```
 Rmd
@@ -69,6 +73,8 @@ Rmd
                    |
                    |--&gt; gif
                    |
+                   |--&gt; mp4
+                   |
                    |--&gt; pptx
 ```
 
@@ -78,12 +84,13 @@ Rmd
 
 ## Partial / incremental slides
 
-For `pdf`, `png`, `gif`, and `pptx` output types, if you want to build a new slide for each increment on [incremental slides](https://slides.yihui.org/xaringan/incremental.html#1), set `partial_slides = TRUE` in any of the following build functions:
+For `pdf`, `png`, `gif`, `mp4`, and `pptx` output types, if you want to build a new slide for each increment on [incremental slides](https://slides.yihui.org/xaringan/incremental.html#1), set `partial_slides = TRUE` in any of the following build functions:
 
 ```
 build_pdf()
 build_png()
 build_gif()
+build_mp4()
 build_pptx()
 build_all()
 ```
@@ -103,7 +110,7 @@ build_pdf("slides.html", partial_slides = TRUE)
 
 ## Complex slides
 
-"Complex" slides are slides that contain [panelsets](https://pkg.garrickadenbuie.com/xaringanExtra/#/panelset) (like the one on this slide) or other html widgets / advanced features that might not render well as a pdf. To render these on separate slides, set `complex_slides = TRUE` in `build_pdf()`, `build_png()`, `build_gif()`, `build_pptx()`, or `build_all()`.
+"Complex" slides are slides that contain [panelsets](https://pkg.garrickadenbuie.com/xaringanExtra/#/panelset) (like the one on this slide) or other html widgets / advanced features that might not render well as a pdf. To render these on separate slides, set `complex_slides = TRUE` in `build_pdf()`, `build_png()`, `build_gif()`, `build_mp4()`, `build_pptx()`, or `build_all()`.
 
 .panelset[
 .panel[.panel-name[Chunk]
@@ -118,20 +125,20 @@ head(mtcars)
 
 
 ```
-##                    mpg cyl disp  hp drat    wt  qsec
-## Mazda RX4         21.0   6  160 110 3.90 2.620 16.46
-## Mazda RX4 Wag     21.0   6  160 110 3.90 2.875 17.02
-## Datsun 710        22.8   4  108  93 3.85 2.320 18.61
-## Hornet 4 Drive    21.4   6  258 110 3.08 3.215 19.44
-## Hornet Sportabout 18.7   8  360 175 3.15 3.440 17.02
-## Valiant           18.1   6  225 105 2.76 3.460 20.22
-##                   vs am gear carb
-## Mazda RX4          0  1    4    4
-## Mazda RX4 Wag      0  1    4    4
-## Datsun 710         1  1    4    1
-## Hornet 4 Drive     1  0    3    1
-## Hornet Sportabout  0  0    3    2
-## Valiant            1  0    3    1
+##                    mpg cyl disp  hp drat    wt
+## Mazda RX4         21.0   6  160 110 3.90 2.620
+## Mazda RX4 Wag     21.0   6  160 110 3.90 2.875
+## Datsun 710        22.8   4  108  93 3.85 2.320
+## Hornet 4 Drive    21.4   6  258 110 3.08 3.215
+## Hornet Sportabout 18.7   8  360 175 3.15 3.440
+## Valiant           18.1   6  225 105 2.76 3.460
+##                    qsec vs am gear carb
+## Mazda RX4         16.46  0  1    4    4
+## Mazda RX4 Wag     17.02  0  1    4    4
+## Datsun 710        18.61  1  1    4    1
+## Hornet 4 Drive    19.44  1  0    3    1
+## Hornet Sportabout 17.02  0  0    3    2
+## Valiant           20.22  1  0    3    1
 ```
 ]
 ]
