updated example slides with new features

--- a/inst/example/slides.html
+++ b/inst/example/slides.html
@@ -4,6 +4,7 @@
     <title>{xaringanBuilder}</title>
     <meta charset="utf-8" />
     <meta name="author" content="John Paul Helveston" />
+    <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/default-fonts.css" rel="stylesheet" />
     <link href="libs/panelset/panelset.css" rel="stylesheet" />
@@ -16,7 +17,7 @@ class: center, middle, inverse, title-slide
 # {xaringanBuilder}
 ## Build xaringan slides to different outputs
 ### John Paul Helveston
-### 2020/09/27 (updated: 2021-02-26)
+### z2021-07-24
 
 ---
 
@@ -80,6 +81,7 @@ Rmd
 
 ]
 
+y
 ---
 
 ## Partial / incremental slides
@@ -125,20 +127,20 @@ head(mtcars)
 
 
 ```
-##                    mpg cyl disp  hp drat    wt
-## Mazda RX4         21.0   6  160 110 3.90 2.620
-## Mazda RX4 Wag     21.0   6  160 110 3.90 2.875
-## Datsun 710        22.8   4  108  93 3.85 2.320
-## Hornet 4 Drive    21.4   6  258 110 3.08 3.215
-## Hornet Sportabout 18.7   8  360 175 3.15 3.440
-## Valiant           18.1   6  225 105 2.76 3.460
-##                    qsec vs am gear carb
-## Mazda RX4         16.46  0  1    4    4
-## Mazda RX4 Wag     17.02  0  1    4    4
-## Datsun 710        18.61  1  1    4    1
-## Hornet 4 Drive    19.44  1  0    3    1
-## Hornet Sportabout 17.02  0  0    3    2
-## Valiant           20.22  1  0    3    1
+##                    mpg cyl disp  hp drat    wt  qsec vs am
+## Mazda RX4         21.0   6  160 110 3.90 2.620 16.46  0  1
+## Mazda RX4 Wag     21.0   6  160 110 3.90 2.875 17.02  0  1
+## Datsun 710        22.8   4  108  93 3.85 2.320 18.61  1  1
+## Hornet 4 Drive    21.4   6  258 110 3.08 3.215 19.44  1  0
+## Hornet Sportabout 18.7   8  360 175 3.15 3.440 17.02  0  0
+## Valiant           18.1   6  225 105 2.76 3.460 20.22  1  0
+##                   gear carb
+## Mazda RX4            4    4
+## Mazda RX4 Wag        4    4
+## Datsun 710           4    1
+## Hornet 4 Drive       3    1
+## Hornet Sportabout    3    2
+## Valiant              3    1
 ```
 ]
 ]
