--- a/inst/example/slides.html
+++ b/inst/example/slides.html
@@ -4,7 +4,7 @@
     <title>{renderthis}</title>
     <meta charset="utf-8" />
     <meta name="author" content="John Paul Helveston &amp; Garrick Aden-Buie" />
-    <meta name="date" content="2022-04-14" />
+    <meta name="date" content="2022-06-10" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/default-fonts.css" rel="stylesheet" />
@@ -15,10 +15,18 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
+.title[
 # {renderthis}
+]
+.subtitle[
 ## Render media to different formats
+]
+.author[
 ### John Paul Helveston &amp; Garrick Aden-Buie
-### 2022-04-14
+]
+.date[
+### 2022-06-10
+]
 
 ---
 
@@ -63,24 +71,28 @@ remotes::install_github("jhelvy/renderthis")
 #### Render hierarchy:
 
 ```
-Rmd / qmd
-    |
-    |--&gt; social (png)
-    |
-    |--&gt; html
-          |
-          |--&gt; pdf
-                |
-                |--&gt; png
-                      |
-                      |--&gt; gif
-                      |
-                      |--&gt; mp4
-                      |
-                      |--&gt; pptx
+Rmd
+ |
+ |--&gt; social (png)
+ |
+ |--&gt; html
+       |
+       |--&gt; pdf
+             |
+             |--&gt; png
+                   |
+                   |--&gt; gif
+                   |
+                   |--&gt; mp4
+                   |
+                   |--&gt; pptx
 ```
 
 ]
+
+???
+
+- This is a speaker note
 
 ---
 
@@ -216,6 +228,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
